force-app/main/default/objects/Account/fields/Cuisines__c.field-meta.xml
<CustomField>
    <fullName>Cuisines__c</fullName>
    <label>Cuisines</label>
    <length>255</length>
    <type>Text</type>
</CustomField>