force-app/main/default/objects/Account/fields/Location_Area__c.field-meta.xml
<CustomField>
    <fullName>Location_Area__c</fullName>
    <label>Location Area</label>
    <length>150</length>
    <type>Text</type>
</CustomField>