force-app/main/default/objects/Account/fields/Opening_Hours__c.field-meta.xml
<CustomField>
    <fullName>Opening_Hours__c</fullName>
    <label>Opening Hours</label>
    <length>100</length>
    <type>Text</type>
</CustomField>